add-workout.css
#add-main-container {
    display: none;
}

#add-workout-actions button {
    flex-grow: 1;
}

input {
    border: none;
    background: none;
    width: 60px;
    color: white;
}

textarea {
    background: none;
    font-family: "Inter";
    color: white;
}

.workout-detail {
    text-align: center;
    font-size: 1.8rem;
    width: 32%;
}

    #add-reps input {
        width: 30px;
    }

